Make the footer icons spin on hover

--- a/css/design.scss
+++ b/css/design.scss
@@ -271,6 +271,23 @@ footer .logo {
   width: 42px;
 }
 
+footer .logo:hover {
+  -webkit-animation: spin 2s linear;
+  animation: spin 2s linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+}
+
+@keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+@-webkit-keyframes spin {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
 .home-page-highlighted-paper-card {
   // TODO: @extend .card;
   color: black;
