Make SVG files usable with CSS
SVG files are now located beneath the _includes folder. This allows
them to be inserted as raw HTML rather than as images, which lets
them be modifiable by CSS. Now, they can change colors when hovered,
grow in size, shrink, whatever.

Additionally, this is exemplified by the ISU logo in the footer. It
changes color to yellow when hovered.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
         <div class="col-xs-12">
           <div class="col col-lg-3 isu-logo-wrapper">
             <a href="http://www.iastate.edu">
-              <img src="/img/isu-stacked.svg" alt="Iowa State University" class="isu-logo">
+              {% include img/isu-stacked.svg %}
             </a>
           </div>
           <div class="col col-sm-6 col-md-5 col-lg-4">
@@ -47,18 +47,19 @@
           <div class="col-md-3 col-lg-1 hidden-sm-down project-logos">
             <div>
               <a href="http://web.cs.iastate.edu/~panini/">
-                <img src="/img/panini-logo.svg" class="logo" alt="Boa Logo">
+                {% include img/panini-logo.svg %}
                 Panini
-              </div>
-              <div>
-                <a href="http://boa.cs.iastate.edu">
-                  <img src="/img/boa-logo.svg" class="logo" alt="Boa Logo">
-                  Boa
-                </a>
-              </div>
+              </a>
+            </div>
+            <div>
+              <a href="http://boa.cs.iastate.edu">
+                {% include img/boa-logo.svg %}
+                Boa
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
