--- a/_includes/papers_page/paper_card.html
+++ b/_includes/papers_page/paper_card.html
@@ -18,7 +18,7 @@
       {% endbibtex %}
     </a>
     <a href="{{ download_link_prefix }}{{ include.paper.download_link }}">
-      <img src="/img/pdf_icon.svg" alt="PDF Download"/>
+      {% include /img/pdf_icon.svg %}
     </a>
   </div>
   <div id="coll-{{ key }}" class="card-block collapse" aria-labelledby="head-{{ key }}">
